v300 jdk11 deprication fixes